# fitpet-jira-app

./: README.md  main.py  pyproject.toml
.github/: build.yaml
.github/workflows/: build.yaml
fitpet_jira/: config.py  jira_client.py  utils.py
tests/: conftest.py  test_jira_client.py  test_utils.py
